# tigerbot

./: .breakpoints  daysofsorrow.txt  main.py  pyproject.toml  thing.txt  ytdl.py
cogs/: assist.py  fun.py  integrations.py  mod.py  modal.py  reactionroles.py  slash.py  trigger.py  webhook.py  wip.py  wip2.py  ytdl.py
old/: afk.py  k.py  moderation.py  test.py
wip/: integrations.py  update.py  webhook.py  ytdl.py
